WJS - 3.0.3 - 2014-10-30
------------------------
- Loaders for .css and .js links
- Move js files to src

WJS - 3.0.2 - 2014-10-30
------------------------
- ie debug

WJS - 3.0.1 - 2014-10-30
------------------------
- Loaders can only be add
- Event on wjs ajax call
- Allow dependencies filtering
- Various debug

WJS - 3.0.0 - 2014-10-29
------------------------
- Total rewrite
- Core js size extremely reduced
- Performances boosted
- More clear API
- And so on..

WJS - 2.6.11 - 2014-10-14
-------------------------
- Code style
- Variables renaming

WJS - 2.6.10 - 2014-09-21
-------------------------
- Minor improvements

WJS - 2.6.9 - 2014-09-20
------------------------
- Debug xhr on explorer

WJS - 2.6.8 - 2014-09-13
------------------------
- Two new loaders
- Improve global wrappers
- Point to internal objects only
- Use unique internal xhr
- call_base can now loop
- Minor improvments
- Refractoring
- Code style

WJS - 2.6.7 - 2014-08-06
------------------------
- New source format

WJS - 2.6.6 - 2014-07-01
------------------------
- Created an xhr shortcut
- Code style
- AJAX send post parameters
- Include subversion into master

WJS - 2.6.5 - 2014-06-23
------------------------
- Split javascript_file_pack()
- Rename "get_*" like functions
- object_find rewrite
- Add call_base / use it internally
- Remove jquery loader
- Remove useless transcoded variables
- Code style / Comment cleanup

WJS - 2.6.4 - 2014-05-13
------------------------
- Split js_header functions
- jQuery loader debug
- Add factory release support

WJS - 2.6.3 - 2014-05-08
------------------------
- Add code comments

WJS - 2.6.2 - 2014-05-05
------------------------
- Add object_cleanup methods
- Add inherit_package methods
- Add dom node tests methods
- Add path_subtract method
- Do not deep extend transcode methods anymore
- Do not append output default groups automatically anymore, use output_group_append_default()
- Invert query strings order for better debug
- Wrap aggregated js