@@ -1,15 +1,15 @@
-(function (wjs) {
+(function (context) {
   'use strict';
   // <--]
-  wjs.loaderAdd('cssLink', {
+  context.wjs.loaderAdd('cssLink', {
 
     /**
      * Javascript are loaded via AJAX.
      */
     extLoad: function (urls, options) {
+      urls = (!Array.isArray(urls)) ? [urls] : urls;
       // Init a new process.
-      var i, urls = (!Array.isArray(urls)) ? [urls] : urls,
-        length = urls.length,
+      var i, length = urls.length,
         process = new this.wjs.processProto({
           async: options.async,
           complete: options.complete,
@@ -45,4 +45,4 @@
     }
   });
   // [-->
-}(wjs));
+}(typeof wjsContext !== 'undefined' ? wjsContext : window));
