@@ -1,0 +1,7 @@
+{
+  "name":"wjs",
+  "version":"3.0.4",
+  "dependencies":[
+    
+  ]
+}
