@@ -1,5 +1,4 @@
-// wJs v3.0.4 - (c) Romain WEEGER 2010 / 2014 - www.wexample.com | MIT and GPL licenses
-(function(e){var g;if(void 0===e.wjs||"3.0.4"!==e.wjs.version)g=function(){this.extendObject(this,{window:e.window||window,document:e.document||window.document,version:"3.0.4",readyCallbacks:[],readyComplete:!1,packageDefault:null,loaders:{},loadersExtra:[],loadersBuffer:{},loadersBasic:{},extLoaded:{},extRequire:{},processProto:null,processes:[],classProtos:{},classMethods:{},settings:null,pull:this.extPull})},g.prototype={init:function(a){var b=this;this.window.addEventListener("load",
+(function(l){(function(e){var g;if(void 0===e.wjs||"3.0.4"!==e.wjs.version)g=function(){this.extendObject(this,{window:e.window||window,document:e.document||window.document,version:"3.0.4",readyCallbacks:[],readyComplete:!1,packageDefault:null,loaders:{},loadersExtra:[],loadersBuffer:{},loadersBasic:{},extLoaded:{},extRequire:{},processProto:null,processes:[],classProtos:{},classMethods:{},settings:null,pull:this.extPull})},g.prototype={init:function(a){var b=this;this.window.addEventListener("load",
 function(){b.extendObject(b,a);for(var c=0,f=b.loadersBasic.length;c<f;c++)b.loaderAdd(b.loadersBasic[c]);delete b.loadersBasic;b.loaderBufferFlush();delete b.loaderBufferFlush;b.unpack(b.packageDefault,function(){var a,c;b.readyComplete=!0;a=0;for(c=b.readyCallbacks.length;a<c;a+=1)b.readyCallbacks[a].call(b),delete b.readyCallbacks[a]})})},ready:function(a){!0===this.readyComplete?a():this.readyCallbacks.push(a)},unpack:function(a,b){(new this.processProto(this.extendOptions(b))).responseParse(a)},
 loaderAdd:function(a,b){b=b||{};if(void 0!==this.loadersBuffer)this.loadersBuffer[a]=b;else if(!this.loaders[a]){var c="WjsLoader"+this.upperCaseFirst(a);b.type=a;b.classExtends=b.classExtends||"WjsLoader";this.classExtend(c,b);this.loaders[a]=new (this.classProto(c))(a);this.extLoaded[a]={};this.extRequire[a]={}}},loaderGet:function(a){this.loaders[a]||(-1!==this.loadersExtra.indexOf(a)?this.extPull("wjsLoader",a):this.error('Undefined loader "'+a+'"'));return this.loaders[a]},loaderDestroy:function(a){this.extDestroy("wjsLoader",
 a);this.classProtoDestroy("WjsLoader"+this.upperCaseFirst(a));delete this.loaders[a];delete this.extLoaded[a];delete this.extRequire[a]},loaderBufferFlush:function(){var a,b=this.loadersBuffer;delete this.loadersBuffer;for(a in b)b.hasOwnProperty(a)&&this.loaderAdd(a,b[a])},extPull:function(a,b,c){var f;f=this.extGet(a,b);var d=this.processes,e=d.length;c=this.extendOptions(c)||{};c.async=c.async||void 0!==c.complete;if(f&&!1!==this.loaderGet(a).preventReload&&!0!==c.reload)c.complete&&c.complete(f);
@@ -14,4 +13,4 @@ f;c++)if(!1===this.wjs.extGet(b,a[b][c]))return!0;return!1}}),g=function(a){a=a|
 this.wjs.settings,l=c.extRequests.length,h={},k={};c.loadingStarted=!0;for(a=0;a<l;a++)switch(d=f[a],d.mode){case "server":e="wjs["+a+"][";h[e+g.requestVariableKeyType+"]"]=d.type;h[e+g.requestVariableKeyName+"]"]=d.name;if(d.excludeRequire)if(!0===d.excludeRequire)h[e+g.requestVariableKeyExclude+"]"]="1";else for(b in d.excludeRequire)h[e+g.requestVariableKeyExclude+"]["+b+"]"]=d.excludeRequire[b].join(",");break;case "parse":void 0===k[d.type]&&(k[d.type]={}),k[d.type][d.name]={"#data":!0}}c.wjs.objectIsEmpty(h)?
 c.responseParse(k):c.wjs.ajax({url:c.wjs.settings.responsePath+"?"+c.wjs.param(h)+c.wjs.settings.responseQueryExtraParam,method:"GET",async:c.async,success:function(a){c.wjs.extendObject(k,JSON.parse(a.responseText));c.responseParse(k)}})},loadingComplete:function(){this.wjs.processes.splice(this.wjs.processes.indexOf(this),1);if("function"===typeof this.completeCallback){var a;this.mainType&&this.mainName&&(a=this.wjs.extLoaded[this.mainType][this.mainName]);this.completeCallback(a)}Object.freeze(this)},
 responseParse:function(a){this.wjs.extendObject(this.parseQ,a);this.responseParseNext()},responseParseNext:function(){var a,b,c=this.parseQ;for(a in c)if(c.hasOwnProperty(a)&&this.wjs.loaders[a])for(b in c[a])if(c[a].hasOwnProperty(b)){this.responseParseItem(a,b);return}this.wjs.objectIsEmpty(c)||this.wjs.error("Parse queue not empty.");this.loadingComplete()},responseParseItem:function(a,b){this.wjs.loaderGet(a).responseParseItem(b,this.parseQ[a][b],this)},parseItemComplete:function(a,b,c){this.wjs.extLoaded[a][b]=
-c;delete this.parseQ[a][b];this.wjs.objectIsEmpty(this.parseQ[a])&&delete this.parseQ[a];this.responseParseNext()}},e.wjs.processProto=g,e.wjs.loaderAdd("jsScript",{parseJsScript:function(a,b,c){if("function"!==typeof b)return eval("var loader=this;var process=arguments[2];"+b),b}}),e.wjs.loaderAdd("wjsLoader",{classExtends:"WjsLoaderJsScript",parseWjsLoader:function(a,b,c){if(!0===b)this.wjs.loaderAdd(a);else return this.parseJsScript(a,b,c)}})})("undefined"!==typeof wjsContext?wjsContext:window);
+c;delete this.parseQ[a][b];this.wjs.objectIsEmpty(this.parseQ[a])&&delete this.parseQ[a];this.responseParseNext()}},e.wjs.processProto=g,e.wjs.loaderAdd("jsScript",{parseJsScript:function(a,b,c){if("function"!==typeof b)return eval("var loader=this;var process=arguments[2];"+b),b}}),e.wjs.loaderAdd("wjsLoader",{classExtends:"WjsLoaderJsScript",parseWjsLoader:function(a,b,c){if(!0===b)this.wjs.loaderAdd(a);else return this.parseJsScript(a,b,c)}})})(l)})(jQuery);
